2A/05_Projet_GL/src/test/deca/context/invalid/complet/58_selection_protected_cond1.deca
// Description :
//   acces a un champ protege : condition 1 du poly 
// Resultats :
//    ligne 17 :  x est protege
// Historique :
//  cree le 16/01/2024

class A {
    protected int x;
}

class X {
    void m()
    {
        A a = new A();
        println(a.x) ; 
    }

}